Add authorization for pages
